src/test/deca/syntax/valid/HW/synt/EmptyProgram.deca
// Description:
//    Programme minimaliste vide.
//
// Resultats:
//    
//
// Historique:
//    cree le 07/01/2022
