src/test/deca/syntax/invalid/HW/rparenthesisMissing.deca
// Description:
//    Programme minimaliste oubliant la parenthèse fermante
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 06/01/2022
{
        print("Hello";
}